import Board from '../tw/Board'
import Game from '../tw/Game'
import render from '../tw/render/text'


const snap = board => {
  const result = render(board, 'piece_type', {extra_layers:['piece_dindex']})
  if (process.argv.includes('-V')) {
    console.log(result)
  }
  expect(result).toMatchSnapshot()
}

test('2-skull', () => {
  const board = new Board({W: 8, H: 3, pieces: 'skull'})
  const game = new Game({ board })
  snap(board)
  game.nextTurn()
  snap(board)
  game.nextTurn()
  snap(board)
  game.nextTurn()
  snap(board)
})

test('9-skull', () => {
  const pieces = [
    [1, 'skull', [-1, -1]],
    [2, 'skull', [0, -1]],
    [1, 'skull', [1, -1]],
    [2, 'skull', [-1, 0]],
    [1, 'skull', [0, 0]],
    [2, 'skull', [1, 0]],
    [1, 'skull', [-1, 1]],
    [2, 'skull', [0, 1]],
    [1, 'skull', [1, 1]],
  ]
  const board = new Board({W: 5, H: 5, path: [12], pieces})
  const game = new Game({ board })
  snap(board)
  game.nextTurn()
  snap(board)
})

test('getDefaultPath', () => {
  const tests = [
    {W: 5, H: 5},
    {W: 5, H: 10},
    {W: 10, H: 5},
    {W: 10, H: 10},
  ]
  tests.forEach((options) => snap(new Board(options)))
})
