// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2-skull 1`] = `
"type    
XXXXXXXX	
X  kK  X	
XXXXXXXX	"
`;

exports[`2-skull 2`] = `
"type    
XXXXXXXX	
X  --  X	%3k	%4k	
XXXXXXXX	"
`;

exports[`9-skull 1`] = `
"type 
XXXXX	
XkKkX	
XKkKX	
XkKkX	
XXXXX	"
`;

exports[`9-skull 2`] = `
"type 
XXXXX	
X   X	%1k	%2k	%3k	
X - X	%1k	%2k	%3k	
Xk  X	%2k	%3k	
XXXXX	"
`;

exports[`bonetar-conflicting-attack-move 1`] = `
"type 
XXXXX	
X s X	
Xs-BX	
X B X	
XXXXX	"
`;

exports[`bonetar-conflicting-attack-move 2`] = `
"type 
XXXXX	
X s X	
Xs- X	%2b	
X B X	
XXXXX	"
`;

exports[`colliding skulls 1`] = `
"type       
XXXXXXXXXXX	
X         X	
X  k---K  X	
X         X	
XXXXXXXXXXX	"
`;

exports[`colliding skulls 2`] = `
"type       
XXXXXXXXXXX	
X         X	
X  -----  X	%4k	#5	%6k	
X         X	
XXXXXXXXXXX	"
`;

exports[`getDefaultPath 1`] = `
"type 
XXXXX	
X   X	
X - X	
X   X	
XXXXX	"
`;

exports[`getDefaultPath 2`] = `
"type 
XXXXX	
X   X	
X   X	
X | X	
X | X	
X | X	
X | X	
X   X	
X   X	
XXXXX	"
`;

exports[`getDefaultPath 3`] = `
"type      
XXXXXXXXXX	
X        X	
X  ----  X	
X        X	
XXXXXXXXXX	"
`;

exports[`getDefaultPath 4`] = `
"type      
XXXXXXXXXX	
X        X	
X        X	
X  -|    X	
X   |    X	
X   |    X	
X   ---  X	
X        X	
X        X	
XXXXXXXXXX	"
`;
